--- a/apps/Frontend/package.json
+++ b/apps/Frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
- "dependencies": {
+  "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
@@ -29,7 +29,12 @@
     "react-intersection-observer": "^9.14.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "@mui/lab": "^6.0.0-beta.21",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.2",
+    "prop-types": "^15.8.1",
+    "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -42,7 +47,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
