--- a/apps/Frontend/package.json
+++ b/apps/Frontend/package.json
@@ -13,15 +13,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.2",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -29,12 +34,10 @@
     "react-intersection-observer": "^9.14.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-slick": "^0.30.3",
+    "react-to-print": "^3.0.4",
     "recharts": "^2.15.0",
-    "@mui/lab": "^6.0.0-beta.21",
-    "html2pdf": "^0.0.11",
-    "html2pdf.js": "^0.10.2",
-    "prop-types": "^15.8.1",
-    "react-to-print": "^3.0.4"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
