--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -19,13 +19,15 @@
     },
     {
       "src": "/api/v1/(.*)",
-      "dest": "index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
       "headers": {
-        "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Origin": "https://project-p-final-frontend.vercel.app",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization",
         "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,PATCH,OPTIONS",
-        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
-      }
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "dest": "index.js",
+      "continue": true
     },
     {
       "src": "/(.*)",
