add root endpoint and health check route; update Vercel configuration

--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -30,6 +30,10 @@
       "continue": true
     },
     {
+      "src": "/api/health",
+      "dest": "index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "index.js"
     }
