--- a/apps/Frontend/.env.production
+++ b/apps/Frontend/.env.production
@@ -1,3 +1,2 @@
-
+VITE_API_URL=https://project-p-final-backend.vercel.app/
 VITE_NODE_ENV=production
-VITE_API_URL=https://project-p-final-backend.vercel.app/api/v1
