--- a/apps/Frontend/vercel.json
+++ b/apps/Frontend/vercel.json
@@ -4,8 +4,8 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://project-p-final-backend.vercel.app/api/:path*"
+      "source": "/api/v1/:path*",
+      "destination": "https://project-p-final-backend.vercel.app/api/v1/:path*"
     },
     {
       "source": "/(.*)",
