--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,42 +1,8 @@
+
+
 {
   "version": 2,
-  "git": {
-    "deploymentEnabled": {
-      "main": true,
-      "testDev": false
-    }
-  },
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/health",
-      "dest": "index.js"
-    },
-    {
-      "src": "/api/v1/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://tnp-nitkkr.vercel.app",
-        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,PATCH,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Max-Age": "600"
-      },
-      "dest": "index.js",
-      "continue": true
-    },
-    {
-      "src": "/api/health",
-      "dest": "index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
+  "name": "native-server",
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
