--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,8 +1,15 @@
-
-
 {
   "version": 2,
   "name": "native-server",
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+  "routes": [
+    { 
+      "src": "/api/v1/(.*)", 
+      "dest": "/index.js" 
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/index.js" 
+    }
+  ]
 }
